# skey

./: .gitignore  Makefile  README.md  pyproject.toml
skey/: __init__.py  chromanet.py  cli.py  hcqt.py  key_detection.py
skey/src/: chromanet.py  convnext.py  hcqt.py
tests/: test_detect_key.py
training_utils/: skey.py  skey_loss.py
