[tool.poetry]
name = "skey"
version = "0.1.0"
description = ""
authors = ["Yuexuan Kong <ykong@deezer.com>"]
packages = [
    { include = "skey" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.12"
numpy = "<1.24"
torch = "2.4.*"
tqdm = "4.65.*"
einops = "0.6.*"
nnAudio = "0.3.2"
librosa = "^0.11.0"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
pdbr = "*"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry.scripts]
skey = "skey.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
