[tool.poetry]
name = "skey"
version = "0.1.0"
description = ""
authors = ["Yuexuan Kong <ykong@deezer.com>"]
packages = [
    { include = "skey" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.12"
numpy = "<1.24"
torch = "~2.4.0"
torchaudio = "~2.4.0"
tqdm = "4.65.*"
einops = "0.6.*"
nnAudio = "0.3.2"
soundfile = "^0.13.1"

[tool.poetry.group.dev.dependencies]
mypy = "*"
ruff = "*"
pytest = "*"
pdbr = "*"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["T203", "E741", "E742", "E743", "F", "I"]
ignore = ["F401"]

[tool.poetry.scripts]
skey = "skey.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
